<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.wso2.carbon.gateway.httploadbalancer</groupId>
        <artifactId>org.wso2.carbon.gateway.httploadbalancer.parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../../../pom.xml</relativePath>
    </parent>

    <artifactId>org.wso2.carbon.gateway.httploadbalancer</artifactId>
    <name>WSO2 Carbon - Gateway HTTP Load Balancer Core</name>
    <description>WSO2 Carbon Gateway HTTP Load Balancer</description>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>bundle</packaging>

    <dependencies>
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.core</artifactId>
            <version>6.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.eclipse.osgi</groupId>
            <artifactId>org.eclipse.osgi</artifactId>
            <version>3.10.2.v20150203-1939</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.eclipse.osgi</groupId>
            <artifactId>org.eclipse.osgi.services</artifactId>
            <version>3.4.0.v20140312-2051</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.gateway</groupId>
            <artifactId>org.wso2.carbon.gateway.core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.gateway.inbounds</groupId>
            <artifactId>org.wso2.carbon.gateway.inbounds.http</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.gateway.outbounds</groupId>
            <artifactId>org.wso2.carbon.gateway.outbounds.http</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.transport</groupId>
            <artifactId>org.wso2.carbon.transport.http.netty</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.messaging</groupId>
            <artifactId>org.wso2.carbon.messaging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
     <!--   <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${javax.servlet.version}</version>
        </dependency> -->
        <!-- http://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient-osgi</artifactId>
            <version>${org.apache.httpcomponents.httpclient.version}</version>
        </dependency>
       <!-- <dependency>
            <groupId>org.apache.servicemix.bundles</groupId>
            <artifactId>org.apache.servicemix.bundles.commons-validator</artifactId>
            <version>${org.apache.servicemix.bundles.commons-validator.version}</version>
        </dependency> -->
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${commons.validator.version}</version>
        </dependency>

    </dependencies>
    <build>
        <pluginManagement>
            <plugins>

                <!-- Compiler -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <compilerArgs>
                            <arg>-Xlint</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <properties>
        <export.package>
            org.wso2.carbon.gateway.httploadbalancer.*;-split-package:=merge-first;version="${carbon.gw.lb.version}"
        </export.package>
        <import.package>
            org.osgi.framework.*;version="${osgi.framework.import.version.range}",
            org.wso2.carbon.gateway.inbounds.http.builder,
            org.wso2.carbon.gateway.inbounds.http,
            org.wso2.carbon.gateway.outbounds.http,
            org.wso2.carbon.gateway.outbounds.http.builder,
            org.wso2.carbon.gateway.core.*;version="${carbon.gw.package.export.version}",
            org.wso2.carbon.transport.*;version="${carbon.transport.package.import.version.range}",
            org.wso2.carbon.messaging.*;version="${carbon.messaging.package.import.version.range}",
            org.slf4j.*,
           <!-- org.apache.http.*;version="${org.apache.httpcomponents.httpclient.version}", -->
            org.apache.commons.validator.*;version="${commons.validator.version}";
           <!-- org.apache.servicemix.bundles.commons.*;version="${org.apache.servicemix.bundles.commons-validator.version}" -->
            <!-- javax.servlet.*;version="${javax.servlet.version}" -->

        </import.package>
        <!--  <Require-Bundle>
              org.wso2.carbon.gateway.core.*;
          </Require-Bundle>-->


        <osgi.framework.import.version.range>[1.8.0, 2.0.0)</osgi.framework.import.version.range>
    </properties>

</project>